# openclaw-eval

./: README.md  lib.py  plan.md  pyproject.toml  report.py  run.py
specs/: openclaw-eval-system.md
src/openclaw_eval/: __init__.py  lib.py  report.py  run.py
tests/: test_checks.py  test_models.py  test_report.py
tests/fixtures/: sample.jsonl
